-------------
Version 0.7.4
-------------

TOOLKIT

  * General

- Added support for the new Reduced Redundancy Storage (RRS) class
  for objects. This discounted storage class can be applied when an
  object is created, overwritten or copied. The storage class can be
  set per-object, or a default value can be set with the property
  's3service.defaultStorageClass'
- Added support for buckets located in the Asia Pacific
  (Singapore) location "ap-southeast-1".
- Eucalyptus-friendly generated URLs (#14). JetS3t configuration
  properties 's3service.s3-endpoint-virtual-path',
  's3service.s3-endpoint-http-port' and
  's3service.s3-endpoint-https-port' are no longer ignored when
  generating signed or torrent URLs.
- Bash shell scripts now support cygwin by automatically
  converting classpaths to Windows format.
- Improved configurability and flexibility by removing dependence
  on the VM-wide static Constants#S3_HOSTNAME constant value
  (see API Changes below)

  * CloudFront Service

- Updated service to support API version 2010-05-01 which adds
  logging support for streaming distributions.
  NOTE: This change breaks backward-compatibility of the API.

  * API Changes

- Removed support for methods and metadata attributes that have been
  obsolete (and deprecated) since version 0.6.0.
- Deprecated static methods in S3Service for generating signed URLs.
  The new non-static method equivalents should be used from now on to
  avoid dependency on a VM-wide S3 endpoint constant.

COCKPIT

- Added support for the REDUCED_REDUNDANCY storage class to the
  Preferences dialog (set default storage class for uploads),
  the Copy or Move dialog (set the storage class for destination
  objects), and the Object Attributes dialog (see the current
  storage class property of objects)
- Added support for buckets located in the Asia Pacific
  (Singapore) location.

KUDOS TO:

- Alexey I. Froloff for Eucalyptus-friendly generated URLs patch.